- Remove `COPYING.lesser` from the v4 frontend folder so its not implied that the template is under license.
We only license our module and compiled code, not the template. To ensure the exe alongside the script is unambiguously licensed under the LGPL, embed our license into it and all other compiled sources.

--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke.csproj
@@ -33,4 +33,8 @@
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\COPYING.Lesser"/>
+  </ItemGroup>
 </Project>
