--- a/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client.Launcher/PSADT.ClientServer.Client.Launcher.csproj
@@ -53,4 +53,8 @@
     <ProjectReference Include="..\PSADT.ClientServer.Client\PSADT.ClientServer.Client.csproj" />
     <ProjectReference Include="..\PSADT\PSADT.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\COPYING.Lesser"/>
+  </ItemGroup>
 </Project>
