--- a/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
@@ -62,4 +62,7 @@
     <PackageReference Include="System.Management.Automation" Version="7.4.*" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\COPYING.Lesser"/>
+  </ItemGroup>
 </Project>
