--- a/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -96,4 +96,8 @@
     <PackageReference Include="System.Collections.Immutable" Version="9.0.7" />
     <PackageReference Include="System.Reflection.Metadata" Version="9.0.7" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\COPYING.Lesser"/>
+  </ItemGroup>
 </Project>
