--- a/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
@@ -12,6 +12,7 @@
     <RootNamespace>PSADT.UserInterface.TestHarness</RootNamespace>
     <AssemblyName>PSADT.UserInterface.TestHarness</AssemblyName>
     <Product>PSAppDeployToolkit User Interface Test Harness</Product>
+    <Company>PSAppDeployToolkit Team</Company>
     <Copyright>Copyright © 2025 PSAppDeployToolkit Team. All rights reserved.</Copyright>
     <AssemblyTitle>PSAppDeployToolkit User Interface Test Harness</AssemblyTitle>
     <AssemblyDescription>This product serves as a test bed for PSADT.UserInterface, our client display server for PSAppDeployToolkit.</AssemblyDescription>
