- Ensure documentation updates can flow from main to the website repo.

--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -46,7 +46,7 @@ jobs:
       run: dotnet tool install --global azuresigntool
 
     - name: Azure Login
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
       uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -82,7 +82,7 @@ jobs:
         overwrite: true
 
     - name: Update Website Docs
-      if: github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/develop'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
       shell: powershell
       env:
         API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
