- Relocate client/server process lockdown feature to `ProcessManagement` class so it can be used with async client/server operations.
Fixes https://discourse.psappdeploytoolkit.com/t/4-1-5-show-adtinstallationrestartprompt/6957.

--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <InternalsVisibleTo Include="PSADT.Tests" />
     <InternalsVisibleTo Include="PSADT.ClientServer.Client" />
+    <InternalsVisibleTo Include="PSADT.ClientServer.Client.Launcher" />
     <InternalsVisibleTo Include="PSADT.ClientServer.Server" />
     <InternalsVisibleTo Include="PSADT.UserInterface" />
   </ItemGroup>
