--- a/src/PSADT/PSADT.Tests/PSADT.Tests.csproj
+++ b/src/PSADT/PSADT.Tests/PSADT.Tests.csproj
@@ -11,6 +11,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <AnalysisLevel>latest-minimum</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
