--- a/src/PSADT/PSADT.Tests/PSADT.Tests.csproj
+++ b/src/PSADT/PSADT.Tests/PSADT.Tests.csproj
@@ -11,7 +11,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <AnalysisLevel>latest-recommended</AnalysisLevel>
+    <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
