--- a/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net472;net8.0-windows10.0.18362.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <NoWarn>$(NoWarn);CA1031;CA1866;CA1867;CA2263</NoWarn>
+    <NoWarn>CA1031;CA1866;CA1867;CA2263</NoWarn>
     <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>latest</LangVersion>
     <Deterministic>true</Deterministic>
