Simplify some using statements where we don't need braces.

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,7 @@ insert_final_newline = true
 dotnet_diagnostic.IDE0005.severity = error
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:error
 dotnet_diagnostic.IDE0041.severity = error
+dotnet_diagnostic.IDE0063.severity = error
 dotnet_diagnostic.IDE0090.severity = error
 dotnet_diagnostic.RS0030.severity = error
 dotnet_code_quality.RS0030.enabled = true
